# snap-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: build_docs.yml  publish.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/modules/: client.rst  scrape.rst  snap_python.components.rst  snap_python.rst  snap_python.schemas.rst  utils.rst
docs/source/modules/components/: config.rst  snaps.rst  store.rst
docs/source/modules/schemas/: changes.rst  common.rst  config.rst  snaps.rst  store.rst
src/pysnap/: client.py  utils.py
src/pysnap/components/: snaps.py  store.py
src/pysnap/schemas/: changes.py  common.py  snaps.py
src/pysnap/schemas/store/: info.py  search.py
src/snap_python/: __init__.py  client.py  scrape.py  utils.py
src/snap_python/components/: snaps.py  store.py
src/snap_python/schemas/: changes.py  common.py  snaps.py
src/snap_python/schemas/store/: info.py  refresh.py  search.py  track.py  utils.py
tests/: __init__.py  conftest.py  test_channel_map_risk_map.py  test_config_endpoints.py  test_pysnap.py  test_pysnap_snaps_endpoints.py  test_schema_conversions.py  test_sideload_app.py  test_snap_python_client.py  test_snaps_endpoints.py  test_store_endpoints.py
tests/data/: arch_search_response.json  convertermulti_info_response.json  installed_snaps.json  installed_snaps_long.json  store_tui_info_response.json  store_tui_refresh_response.json
tests/lib/: setup_lxd_container.py  socat_snapd.service
tests/notebooks/: .gitignore
